force-app/main/default/objects/Resource_Request__c/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Role</label>
    <referenceTo>Job_Role__c</referenceTo>
    <relationshipLabel>Resource Requests</relationshipLabel>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>