force-app/main/default/objects/Resource_Request__c/fields/Months_Needed__c.field-meta.xml
<CustomField>
    <fullName>Months_Needed__c</fullName>
    <label>Months Needed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>