force-app/main/default/objects/Resource_Request__c/fields/Project_Phases_Needed__c.field-meta.xml
<CustomField>
    <fullName>Project_Phases_Needed__c</fullName>
    <label>Project Phases Needed</label>
    <length>250</length>
    <type>Text</type>
</CustomField>