force-app/main/default/objects/Resource_Request__c/fields/Proposed_Employee__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resource Requests</relationshipLabel>
    <relationshipName>Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>