force-app/main/default/objects/Resource_Request__c/fields/Specializations__c.field-meta.xml
<CustomField>
    <fullName>Specializations__c</fullName>
    <label>Specializations</label>
    <length>250</length>
    <type>Text</type>
</CustomField>