force-app/main/default/objects/Resource_Request__c/fields/US_Citizenship_Required__c.field-meta.xml
<CustomField>
    <fullName>US_Citizenship_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US Citizenship Required?</label>
    <type>Checkbox</type>
</CustomField>